Change response GET /posts; add e2e tests
